kustomize/memodawg/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memodawg-api
  namespace: memodawg
  labels:
    app.kubernetes.io/name: memodawg
    app.kubernetes.io/instance: memodawg-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: memodawg
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Deployment for memodawg API."
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: memodawg
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: memodawg
        tier: api
        app.kubernetes.io/name: memodawg
        app.kubernetes.io/instance: memodawg-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: memodawg
    spec:
      containers:
      - env:
        - name: AZURE_KEY
          valueFrom:
            secretKeyRef:
              key: AZURE_KEY
              name: memodawg-secret
        - name: GOTIFY_TOKEN
          valueFrom:
            secretKeyRef:
              key: GOTIFY_TOKEN
              name: memodawg-secret
        - name: MEMODAWG_KEY
          valueFrom:
            secretKeyRef:
              key: MEMODAWG_KEY
              name: memodawg-secret
        image: pipelinedave/memodawg-api:0.1.1
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
