kustomize/memodawg/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memodawg-frontend
  namespace: memodawg
  labels:
    app.kubernetes.io/name: memodawg
    app.kubernetes.io/instance: memodawg-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: memodawg
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Deployment for memodawg frontend."
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: memodawg
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: memodawg
        tier: frontend
        app.kubernetes.io/name: memodawg
        app.kubernetes.io/instance: memodawg-frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: memodawg
    spec:
      containers:
      - image: pipelinedave/memodawg-frontend:0.1.1
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
