kustomize/memodawg/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: memodawg-api
    namespace: memodawg
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: memodawg
        tier: api
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: memodawg
          tier: api
      spec:
        containers:
        - env:
          - name: AZURE_KEY
            valueFrom:
              secretKeyRef:
                key: AZURE_KEY
                name: memodawg-secret
          - name: GOTIFY_TOKEN
            valueFrom:
              secretKeyRef:
                key: GOTIFY_TOKEN
                name: memodawg-secret
          - name: MEMODAWG_KEY
            valueFrom:
              secretKeyRef:
                key: MEMODAWG_KEY
                name: memodawg-secret
          image: pipelinedave/memodawg-api:0.1.1
          imagePullPolicy: Always
          name: api
          ports:
          - containerPort: 5000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: memodawg-frontend
    namespace: memodawg
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: memodawg
        tier: frontend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: memodawg
          tier: frontend
      spec:
        containers:
        - image: pipelinedave/memodawg-frontend:0.1.1
          imagePullPolicy: Always
          name: frontend
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
