kustomize/memodawg/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: memodawg-api-service
  namespace: memodawg
spec:
  clusterIP: 10.43.183.249
  clusterIPs:
  - 10.43.183.249
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: memodawg
    tier: api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
