kustomize/memodawg/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"memodawg-api-service","namespace":"memodawg"},"spec":{"ports":[{"port":5000,"protocol":"TCP","targetPort":5000}],"selector":{"app":"memodawg","tier":"api"}}}
    creationTimestamp: "2023-09-02T22:45:57Z"
    name: memodawg-api-service
    namespace: memodawg
    resourceVersion: "1417603"
    uid: cd2494d5-b5a1-4992-845d-93755b74e651
  spec:
    clusterIP: 10.43.183.249
    clusterIPs:
    - 10.43.183.249
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      app: memodawg
      tier: api
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"memodawg-frontend-service","namespace":"memodawg"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"memodawg","tier":"frontend"}}}
    creationTimestamp: "2023-09-03T11:47:01Z"
    name: memodawg-frontend-service
    namespace: memodawg
    resourceVersion: "1436668"
    uid: 5c45a1e2-d3e7-450b-b6de-0b6b4d583879
  spec:
    clusterIP: 10.43.185.129
    clusterIPs:
    - 10.43.185.129
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: memodawg
      tier: frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
