kustomize/memodawg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    description: "Ingress for memodawg application."
  name: memodawg-ingress
  namespace: memodawg
  labels:
    app.kubernetes.io/name: memodawg
    app.kubernetes.io/instance: memodawg
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: memodawg
    app.kubernetes.io/managed-by: flux
spec:
  rules:
  - host: memodawg.stillon.top
    http:
      paths:
      - backend:
          service:
            name: memodawg-api-service
            port:
              number: 5000
        path: /transcribe
        pathType: Exact
      - backend:
          service:
            name: memodawg-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - memodawg.stillon.top
    secretName: memodawg.stillon.top-tls
